--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -10,14 +10,53 @@ Images
 Buttons / Links
 **************/
 
+.sign-up-btn {
+  font-size: 1rem;
+  font-weight: 400;
+  letter-spacing: 0.01em;
+  color: var(--wht);
+  background-color: var(--o);
+  border: none;
+  border-radius: 4px;
+  padding: 0.75rem 1.5rem;
+  cursor: pointer;
+}
+
 /*************
 Typography
 **************/
+
+.header-heading {
+  text-transform: uppercase;
+  font-size: 1.5rem;
+  font-weight: 700;
+  color: var(--wht);
+  padding: 2rem 0;
+}
 
 /*************
 Layout
 **************/
 
+.header {
+  width: 100%;
+}
+
+.header-container {
+  width: 90%;
+  max-width: 1024px;
+  margin: 0 auto;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
 /*************
 Media Queries
 **************/
+
+/* @media (min-width: 600px) {
+  .header-heading {
+    font-size: 2rem;
+  }
+} */
